<resources>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Proect Management App</string>
    <string name="title_activity_createproject">createproject</string>
    <string name="first_fragment_label">First Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="task_name">Task Name</string>
    <string name="proj_name">Project Name</string>
    <string name="dept">Department Name</string>
    <string name="list">List</string>
    <string name="assign_to">Assign To</string>
    <string name="starting_da">Starting Date</string>

    <string name="est_date">Est Deadline</string>


    <string-array name="taskviewdropdwn">
        <item> Ongoing </item>
        <item> Completed </item>



    </string-array>


    <string-array name="handlerslist">

        <item>Priyal Kumavat</item>
        <item>Rupal Singh</item>
        <item>Neha Sen</item>
        <item>Rohan Gargh</item>
        <item>Somali Jain</item>
        <item>Vidisha Jha</item>
        <item>Ankita Dey</item>
        <item>Sonam Das</item>

    </string-array>

    <string-array name="department">
        <item>Business Development</item>
        <item>Affiliate Marketing</item>
        <item>Development</item>
        <item>UI/UX-Design</item>
        <item>Law Interns</item>
    </string-array>


    <string-array name="developers">
        <item>Frontend</item>
        <item>Backend</item>
        <item>Fullstack</item>
        <item>Android</item>
        <item>iOS</item>
    </string-array>
    <string-array name="listarray">
        <item>Select All</item>
        <item>Saurav</item>
        <item>Priyal Kumawat</item>
        <item>Ahana Dey</item>
        <item>Piyush</item>
        <item>Jeegyasha</item>
        <item>Diya Mourya</item>
    </string-array>

    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
</resources>
