<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.projectmanagementapp.Dropdown" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Dropdown"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/task_name"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskNameBox"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@id/projName"
                app:layout_constraintTop_toBottomOf="@id/taskName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/projName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/proj_name"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/menu1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taskNameBox" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/projName"
                app:layout_constraintBottom_toTopOf="@id/deptName">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/deptName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dept"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/menu2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/deptName"
                app:layout_constraintBottom_toTopOf="">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/assignTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/assign_to"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/menu2"
                app:layout_constraintBottom_toTopOf="@id/grid_box"
                app:layout_constraintStart_toStartOf="parent"
                />

            <RelativeLayout
                android:id ="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                app:layout_constraintTop_toBottomOf="@id/menu2"
                app:layout_constraintStart_toEndOf="@id/assignTo">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/menu3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/list"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/grid_box">

                <TextView
                    android:id="@+id/starting_da"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/starting_da"
                    android:textColor="#595959"
                    android:textSize="12sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id ="@+id/datebox1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rectangle_3"
                    android:layout_toRightOf="@id/starting_da">

                <EditText
                    android:id="@+id/startingDateText"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="@id/datebox1"
                    app:layout_constraintBottom_toBottomOf="@id/datebox1"
                    app:layout_constraintEnd_toStartOf="@id/cal1"/>

                    <ImageButton
                        android:id="@+id/cal1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_date_range_24"
                        app:layout_constraintEnd_toEndOf="@id/datebox1"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/rel2">

                <TextView
                    android:id="@+id/est_da"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/est_date"
                    android:textColor="#595959"
                    android:textSize="12sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id ="@+id/datebox2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="73dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rectangle_3"
                    android:layout_toRightOf="@id/est_da">

                    <EditText
                        android:id="@+id/estDateText"
                        android:layout_width="127dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="10dp"
                        app:layout_constraintTop_toTopOf="@id/datebox2"
                        app:layout_constraintBottom_toBottomOf="@id/datebox2"
                        app:layout_constraintEnd_toStartOf="@id/cal2"/>

                    <ImageButton
                        android:id="@+id/cal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_date_range_24"
                        app:layout_constraintEnd_toEndOf="@id/datebox2"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/rel3"
                android:background="@color/cardview_shadow_start_color"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="131dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="131dp"
                android:layout_marginBottom="13dp"
                android:backgroundTint="#19989B"
                android:text="save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <LinearLayout
                android:id="@+id/grid_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rectangle_3"
                app:layout_constraintTop_toBottomOf="@id/rel1">
            <GridView
                android:id="@+id/grid_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:horizontalSpacing="2dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/varvisibletext" />

            <TextView
                android:id="@+id/varvisibletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:text="No item is selected!"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/rel1"
                app:layout_costraintBottom_toTopOf="@id/gird_list"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>
